envoy-for-egw.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-for-egw
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 10000
  selector:
    app: envoy-for-egw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-for-egw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-for-egw
  template:
    metadata:
      labels:
        app: envoy-for-egw
    spec:
      containers:
      - name: envoy-for-egw
        image: registry.gitlab.com/acnodal/envoy-for-egw
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 10000
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - name: envoy-cm
          mountPath: /etc/envoy
      imagePullSecrets:
        - name: gitlab
      volumes:
      - name: envoy-cm
        configMap:
          name: envoy-cm
